--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,8 @@ name: Terraform AWS Deployment
 on:
   push:
     branches:
-      - main  # Or the branch you want to trigger deployment from
+      - main
+      - feature2
 
 jobs:
   terraform:
