--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,7 @@ name: Terraform AWS Deployment
 
 on:
   push:
-    branches:
-      - main
-      - feature2
+    branches: ['*']
 
 jobs:
   terraform:
