--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Terraform AWS Deployment
 
 on:
   push:
-    branches: ['*']
+  workflow_dispatch:
 
 jobs:
   terraform:
@@ -11,7 +11,7 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: us-east-1  # Match the region in your Terraform config
+      AWS_REGION: us-east-1
 
     steps:
     - name: Checkout code
@@ -20,7 +20,7 @@ jobs:
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v3
       with:
-        terraform_version: 1.7.5  # Use your preferred version
+        terraform_version: 1.7.5
 
     - name: Terraform Init
       run: terraform init
